<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/default_background"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:id="@+id/createRoomLayout"
    tools:context="com.example.lucasrosario.extensionchord.JoinRoomActivity">

    <Button
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:id="@+id/createRoomLogout"
        android:textColor="#ffffffff"
        android:background="@drawable/button_states"
        android:text="Logout"
        android:layout_gravity="right" />

    <com.example.lucasrosario.extensionchord.custom_views.RoomListItemView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/createRoom"
        custom:room_name="Create Room"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Room Name"
        android:id="@+id/roomNameField"
        android:visibility="gone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Room Password"
        android:inputType="textPassword"
        android:id="@+id/roomPasswordField"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitCreateRoomButton"
        android:text="Submit"
        android:background="@drawable/button_states"
        android:textColor="#ffffffff"
        android:layout_marginBottom="5dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createRoomReload"
        android:textColor="#ffffffff"
        android:background="@drawable/button_states"
        android:text="Reload"/>


    <ListView
        android:id="@+id/roomList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
