<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="+"
        android:id="@+id/expandCreateRoomBtn"
        android:textColor="#ffffff"
        android:background="@drawable/roundedbutton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Luke's Room"
        android:textStyle="bold"
        android:textSize="10pt"
        />

</merge>