<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lucasrosario.extensionchord.SignUpActivity"
    android:background="@color/default_background">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginUsername"
        android:layout_marginTop="137dp"
        android:hint="Username"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:hint="Password"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPasswordCheck"
        android:hint="Password"
        android:textColor="#ffffffff" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/signUpCreate"
        android:layout_marginBottom="54dp"
        android:layout_gravity="center"
        android:background="@drawable/button_states"
        android:textColor="#ffffffff"
        android:layout_marginTop="10dp" />

</TableLayout>
